--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="/storage/emulated/0/Protfolio/IMG-20250321-WA0004.jpg"alt="Your Profile Picture" class="profile-picture">
+            <img src="My_photo.jpg"alt="Your Profile Picture" class="profile-picture">
             <h1>Renuka devi</h1>
             <p>Am computer science student</p>
         </div>
@@ -162,7 +162,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="/storage/emulated/0/Protfolio/IMG-20250321-WA0003.jpg"download-button">Download CV</a>
+            <a href="My_resume.pdf"download-button">Download CV</a>
         </center>
         </div>
         
